--- a/activities/1.3 sample-using-seaborn.ipynb
+++ b/activities/1.3 sample-using-seaborn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,37 @@
    "source": [
     "print (\"Hello World\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a Simple Bar Plot with Matplotlib\n",
+    "# Description:\n",
+    "# Create a bar plot using Matplotlib to visualize the number of sales (in thousands) for a set of\n",
+    "# products: 'A', 'B', 'C', 'D', and 'E' with values [23, 75, 57, 90, 65]."
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
