--- a/src/Module 8/Automating Data Quality Measurement/Ques_1.ipynb
+++ b/src/Module 8/Automating Data Quality Measurement/Ques_1.ipynb
@@ -66,6 +66,15 @@
     "### Task 4: Detect Unique Values and Duplicates\n",
     "**Description**: Use Pandas-Profiling to detect unique values and duplicates in your dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write your code from here"
+   ]
   }
  ],
  "metadata": {
