Data Quality Challenges in Data Engineering Pipelines

--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Types of Data Quality Issues in ML Pipelines\n",
-    "**Description**: Analyze a sample dataset (provided by the instructor) and identify instances of data quality issues such as missing values, bias, or noise."
+    "### Metadata Management for Data Quality\n",
+    "**Description**: Store and use metadata to manage data quality in a pipeline.\n",
+    "\n",
+    "**Steps**:\n",
+    "1. Load metadata\n",
+    "2. Load data\n",
+    "3. Use metadata to validate data quality\n",
+    "4. Show valid data\n"
    ]
   },
   {
@@ -14,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here\n"
+    "# write your code from here"
    ]
   }
  ],
