--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
@@ -4,8 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Types of Data Quality Issues in ML Pipelines\n",
-    "**Description**: Analyze a sample dataset (provided by the instructor) and identify instances of data quality issues such as missing values, bias, or noise."
+    "### Complex Schema Validation with Avro\n",
+    "**Description**: Implement a solution in Python to validate records against a complex nested Avro schema.\n",
+    "\n",
+    "Eg., Complex schema ( nested_schema.avsc ):\n",
+    "\n",
+    "**Steps**:\n",
+    "1. Load schema\n",
+    "2. Example data to validate\n",
+    "3. Validate against schema\n",
+    "4. Read back to check"
    ]
   },
   {
@@ -14,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here\n"
+    "# write your code from here"
    ]
   }
  ],
