Hands-on - Data Quality Checks in Data Engineering & ML

--- a/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_1.ipynb
+++ b/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_1.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Garbage In, Garbage Out (GIGO): Cleaning Missing Data\n",
-    "**Description**: Load a dataset (e.g., Titanic dataset) and identify missing values. Use\n",
-    "appropriate techniques to handle these missing values."
+    "### Detect Data Drift using Kolmogorov-Smirnov Test\n",
+    "**Description**: Use statistical tests to detect data drift between two datasets."
    ]
   },
   {
@@ -15,8 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here\n",
-    "https://github.com/amruthareddy-zenV/AI_DATA_ANALYSIS_"
+    "# write your code from here"
    ]
   }
  ],
