--- a/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_3.ipynb
+++ b/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_3.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Garbage In, Garbage Out (GIGO): Cleaning Missing Data\n",
-    "**Description**: Load a dataset (e.g., Titanic dataset) and identify missing values. Use\n",
-    "appropriate techniques to handle these missing values."
+    "### Using SHAP for Feature Drift Analysis\n",
+    "**Description**: Utilize SHapley Additive exPlanations (SHAP) values to analyze feature\n",
+    "importance changes over time, indicating feature drift."
    ]
   },
   {
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here\n",
-    "https://github.com/amruthareddy-zenV/AI_DATA_ANALYSIS_"
+    "# write your code from here"
    ]
   }
  ],
