--- a/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_2.ipynb
+++ b/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_2.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Garbage In, Garbage Out (GIGO): Cleaning Missing Data\n",
-    "**Description**: Load a dataset (e.g., Titanic dataset) and identify missing values. Use\n",
-    "appropriate techniques to handle these missing values."
+    "### Implementing Adversarial Validation for Data Drift\n",
+    "Description: Create and train a classifier that distinguishes between train and test datasets, using the classifier’s performance to infer data drift."
    ]
   },
   {
@@ -15,8 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here\n",
-    "https://github.com/amruthareddy-zenV/AI_DATA_ANALYSIS_"
+    "# write your code from here"
    ]
   }
  ],
