--- a/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_7.ipynb
+++ b/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_7.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code from here"
+    "# write your code from here\n"
    ]
   }
  ],
