--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_1.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_1.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code from here\n"
+    "# write your code from here"
    ]
   }
  ],
