--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_1.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_1.ipynb
@@ -9,11 +9,155 @@
     "# Title: Load & Examine a Basic Dataset\n",
     "# Description: Load an example dataset such as the Iris dataset and perform basic exploration."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 5 rows of the Iris dataset:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                5.1               3.5                1.4               0.2   \n",
+      "1                4.9               3.0                1.4               0.2   \n",
+      "2                4.7               3.2                1.3               0.2   \n",
+      "3                4.6               3.1                1.5               0.2   \n",
+      "4                5.0               3.6                1.4               0.2   \n",
+      "\n",
+      "   target  \n",
+      "0       0  \n",
+      "1       0  \n",
+      "2       0  \n",
+      "3       0  \n",
+      "4       0  \n",
+      "\n",
+      "\n",
+      "Information about the dataset:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 150 entries, 0 to 149\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   sepal length (cm)  150 non-null    float64\n",
+      " 1   sepal width (cm)   150 non-null    float64\n",
+      " 2   petal length (cm)  150 non-null    float64\n",
+      " 3   petal width (cm)   150 non-null    float64\n",
+      " 4   target             150 non-null    int64  \n",
+      "dtypes: float64(4), int64(1)\n",
+      "memory usage: 6.0 KB\n",
+      "\n",
+      "\n",
+      "Descriptive statistics of the numerical features:\n",
+      "       sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+      "count         150.000000        150.000000         150.000000   \n",
+      "mean            5.843333          3.057333           3.758000   \n",
+      "std             0.828066          0.435866           1.765298   \n",
+      "min             4.300000          2.000000           1.000000   \n",
+      "25%             5.100000          2.800000           1.600000   \n",
+      "50%             5.800000          3.000000           4.350000   \n",
+      "75%             6.400000          3.300000           5.100000   \n",
+      "max             7.900000          4.400000           6.900000   \n",
+      "\n",
+      "       petal width (cm)      target  \n",
+      "count        150.000000  150.000000  \n",
+      "mean           1.199333    1.000000  \n",
+      "std            0.762238    0.819232  \n",
+      "min            0.100000    0.000000  \n",
+      "25%            0.300000    0.000000  \n",
+      "50%            1.300000    1.000000  \n",
+      "75%            1.800000    2.000000  \n",
+      "max            2.500000    2.000000  \n",
+      "\n",
+      "\n",
+      "Number of missing values in each column:\n",
+      "sepal length (cm)    0\n",
+      "sepal width (cm)     0\n",
+      "petal length (cm)    0\n",
+      "petal width (cm)     0\n",
+      "target               0\n",
+      "dtype: int64\n",
+      "\n",
+      "\n",
+      "Distribution of the target variable:\n",
+      "target\n",
+      "0    50\n",
+      "1    50\n",
+      "2    50\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Feature names:\n",
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
+      "\n",
+      "\n",
+      "Target names:\n",
+      "['setosa' 'versicolor' 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "# Load the Iris dataset\n",
+    "iris = load_iris(as_frame=True)\n",
+    "df = iris.frame\n",
+    "\n",
+    "# Display the first few rows of the dataframe\n",
+    "print(\"First 5 rows of the Iris dataset:\")\n",
+    "print(df.head())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Get basic information about the dataset\n",
+    "print(\"Information about the dataset:\")\n",
+    "df.info()\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Display descriptive statistics of the numerical features\n",
+    "print(\"Descriptive statistics of the numerical features:\")\n",
+    "print(df.describe())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Check for missing values\n",
+    "print(\"Number of missing values in each column:\")\n",
+    "print(df.isnull().sum())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Display the distribution of the target variable\n",
+    "print(\"Distribution of the target variable:\")\n",
+    "print(df['target'].value_counts())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Display the feature names and target names\n",
+    "print(\"Feature names:\")\n",
+    "print(iris.feature_names)\n",
+    "print(\"\\n\")\n",
+    "print(\"Target names:\")\n",
+    "print(iris.target_names)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
