--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_7.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_7.ipynb
@@ -2,18 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Title: Group and Aggregate Data\n",
     "# Description: Group the dataset by species (target) and compute the average of each feature."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average feature values for each species:\n",
+      "             sepal_length  sepal_width  petal_length  petal_width\n",
+      "species                                                         \n",
+      "setosa             5.006        3.428         1.462        0.246\n",
+      "versicolor         5.936        2.770         4.260        1.326\n",
+      "virginica          6.588        2.974         5.552        2.026\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Load the sample Iris dataset\n",
+    "iris = sns.load_dataset('iris')\n",
+    "\n",
+    "# Group the DataFrame by the 'species' column and calculate the mean of each feature\n",
+    "average_features_by_species = iris.groupby('species').mean()\n",
+    "\n",
+    "# Print the resulting DataFrame\n",
+    "print(\"Average feature values for each species:\\n\", average_features_by_species)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
