--- a/src/Module 3/Identifying & Measuring Data Quality Issues/Ques_11.ipynb
+++ b/src/Module 3/Identifying & Measuring Data Quality Issues/Ques_11.ipynb
@@ -51,11 +51,239 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Analyzing Common Data Errors ---\n",
+      "\n",
+      "--- 1. Missing Data ---\n",
+      "\n",
+      "Task 1: Number of records with missing customer emails: 2\n",
+      "Incomplete records:\n",
+      "   CustomerID Email\n",
+      "1           2  None\n",
+      "3           4   NaN\n",
+      "\n",
+      "Task 2: Percentage of missing transaction dates: 40.00%\n",
+      "Records with missing transaction dates:\n",
+      "   TransactionID TransactionDate\n",
+      "1            102            None\n",
+      "3            104            None\n",
+      "\n",
+      "Task 3: Records with missing department information:\n",
+      "   EmployeeID Department\n",
+      "2           3       None\n",
+      "4           5        NaN\n",
+      "\n",
+      "--- 2. Duplicate Data ---\n",
+      "\n",
+      "Task 1: Number of duplicate rows in customer data: 0\n",
+      "Duplicate rows:\n",
+      "Empty DataFrame\n",
+      "Columns: [CustomerID, Email]\n",
+      "Index: []\n",
+      "\n",
+      "Task 2: Repeated supplier names:\n",
+      "   SupplierID SupplierName\n",
+      "1           2     Beta Inc\n",
+      "4           2     Beta Inc\n",
+      "\n",
+      "Task 3: Products with duplicate IDs:\n",
+      "  ProductID ProductName\n",
+      "0      P100      Laptop\n",
+      "3      P100      Laptop\n",
+      "\n",
+      "--- 3. Inconsistent Formatting ---\n",
+      "\n",
+      "Task 1: Identifying inconsistent date formats requires careful parsing and standardization.\n",
+      "Assuming a column with mixed date formats would need a function to try different parsers.\n",
+      "\n",
+      "Task 2: Phone numbers with varying formats:\n",
+      "  Name         Phone  consistent_format\n",
+      "1  Bob  987 654 3210              False\n",
+      "\n",
+      "Task 3: Discrepancies in state abbreviations (compared to: ['CA', 'NY', 'TX']):\n",
+      "         City       State\n",
+      "1  Sacramento      Calif.\n",
+      "3     Oakland  California\n",
+      "\n",
+      "--- 4. Data Drift ---\n",
+      "\n",
+      "Task 1: Monthly revenue change (%):\n",
+      "0          NaN\n",
+      "1    10.000000\n",
+      "2    -4.545455\n",
+      "3    42.857143\n",
+      "4   -40.000000\n",
+      "5    77.777778\n",
+      "Name: Revenue, dtype: float64\n",
+      "\n",
+      "Task 2: User engagement metrics per quarter:\n",
+      "           mean        std\n",
+      "Quarter                   \n",
+      "Q1       1025.0  35.355339\n",
+      "Q2       1175.0  35.355339\n",
+      "Q3        975.0  35.355339\n",
+      "\n",
+      "Task 3: Stock price changes:\n",
+      "        Date  Price  Price Change\n",
+      "0 2024-01-01    150           NaN\n",
+      "1 2024-04-01    155           5.0\n",
+      "2 2024-07-01    160           5.0\n",
+      "3 2024-10-01    140         -20.0\n",
+      "4 2025-01-01    170          30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "print(\"--- Analyzing Common Data Errors ---\")\n",
+    "\n",
+    "\n",
+    "customer_data = pd.DataFrame({'CustomerID': [1, 2, 3, 4, 5],\n",
+    "                              'Email': ['abc@example.com', None, 'def@sample.org', np.nan, 'ghi@work.net']})\n",
+    "\n",
+    "sales_data = pd.DataFrame({'TransactionID': [101, 102, 103, 104, 105],\n",
+    "                           'TransactionDate': ['2025-01-15', None, '2025-02-20', None, '2025-03-10']})\n",
+    "\n",
+    "employee_registry = pd.DataFrame({'EmployeeID': [1, 2, 3, 4, 5],\n",
+    "                                  'Department': ['HR', 'Sales', None, 'Technology', np.nan]})\n",
+    "\n",
+    "supplier_data = pd.DataFrame({'SupplierID': [1, 2, 3, 4, 2],\n",
+    "                              'SupplierName': ['Alpha Corp', 'Beta Inc', 'Gamma Ltd', 'Delta Group', 'Beta Inc']})\n",
+    "\n",
+    "product_inventory = pd.DataFrame({'ProductID': ['P100', 'P101', 'P102', 'P100', 'P103'],\n",
+    "                                  'ProductName': ['Laptop', 'Mouse', 'Keyboard', 'Laptop', 'Monitor']})\n",
+    "\n",
+    "contact_list = pd.DataFrame({'Name': ['Alice', 'Bob', 'Charlie', 'David'],\n",
+    "                             'Phone': ['123-456-7890', '987 654 3210', '(555) 123-4567', '1234567890']})\n",
+    "\n",
+    "address_data = pd.DataFrame({'City': ['Los Angeles', 'Sacramento', 'San Francisco', 'Oakland'],\n",
+    "                             'State': ['CA', 'Calif.', 'CA', 'California']})\n",
+    "\n",
+    "revenue_data = pd.DataFrame({'Month': ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],\n",
+    "                             'Revenue': [100, 110, 105, 150, 90, 160]})\n",
+    "\n",
+    "engagement_data = pd.DataFrame({'Quarter': ['Q1', 'Q1', 'Q2', 'Q2', 'Q3', 'Q3'],\n",
+    "                                 'Users': [1000, 1050, 1200, 1150, 950, 1000]})\n",
+    "\n",
+    "stock_prices = pd.DataFrame({'Date': pd.to_datetime(['2024-01-01', '2024-04-01', '2024-07-01', '2024-10-01', '2025-01-01']),\n",
+    "                             'Price': [150, 155, 160, 140, 170]})\n",
+    "\n",
+    "print(\"\\n--- 1. Missing Data ---\")\n",
+    "\n",
+    "# Task 1: Review a dataset where some customer emails are missing. Identify how many records are incomplete.\n",
+    "incomplete_emails_count = customer_data['Email'].isnull().sum()\n",
+    "print(f\"\\nTask 1: Number of records with missing customer emails: {incomplete_emails_count}\")\n",
+    "print(\"Incomplete records:\")\n",
+    "print(customer_data[customer_data['Email'].isnull()])\n",
+    "\n",
+    "# Task 2: Examine a sales dataset with missing transaction dates and determine the percentage of missing data.\n",
+    "missing_dates_count = sales_data['TransactionDate'].isnull().sum()\n",
+    "total_records_sales = len(sales_data)\n",
+    "percentage_missing_dates = (missing_dates_count / total_records_sales) * 100\n",
+    "print(f\"\\nTask 2: Percentage of missing transaction dates: {percentage_missing_dates:.2f}%\")\n",
+    "print(\"Records with missing transaction dates:\")\n",
+    "print(sales_data[sales_data['TransactionDate'].isnull()])\n",
+    "\n",
+    "# Task 3: Identify missing department information in an employee registry.\n",
+    "missing_departments = employee_registry[employee_registry['Department'].isnull()]\n",
+    "print(f\"\\nTask 3: Records with missing department information:\")\n",
+    "print(missing_departments)\n",
+    "\n",
+    "print(\"\\n--- 2. Duplicate Data ---\")\n",
+    "\n",
+    "# Task 1: Analyze a customer dataset with duplicate entries and count the number of duplicates.\n",
+    "duplicates_customer = customer_data.duplicated().sum()\n",
+    "print(f\"\\nTask 1: Number of duplicate rows in customer data: {duplicates_customer}\")\n",
+    "print(\"Duplicate rows:\")\n",
+    "print(customer_data[customer_data.duplicated(keep=False)]) # keep=False shows all duplicates\n",
+    "\n",
+    "# Task 2: Review supplier data and identify any repeated supplier names.\n",
+    "duplicate_suppliers = supplier_data[supplier_data.duplicated(subset=['SupplierName'], keep=False)]\n",
+    "print(f\"\\nTask 2: Repeated supplier names:\")\n",
+    "print(duplicate_suppliers)\n",
+    "\n",
+    "# Task 3: Examine a product inventory list for duplicates in product IDs.\n",
+    "duplicate_product_ids = product_inventory[product_inventory.duplicated(subset=['ProductID'], keep=False)]\n",
+    "print(f\"\\nTask 3: Products with duplicate IDs:\")\n",
+    "print(duplicate_product_ids)\n",
+    "\n",
+    "print(\"\\n--- 3. Inconsistent Formatting ---\")\n",
+    "\n",
+    "# Task 1: Spot inconsistencies in date formats (e.g., DD/MM/YYYY vs. MM/DD/YYYY) in a dataset.\n",
+    "\n",
+    "print(\"\\nTask 1: Identifying inconsistent date formats requires careful parsing and standardization.\")\n",
+    "print(\"Assuming a column with mixed date formats would need a function to try different parsers.\")\n",
+    "\n",
+    "import re\n",
+    "def find_inconsistent_phone_formats(phone_number):\n",
+    "    patterns = [r'^\\d{3}-\\d{3}-\\d{4}$', r'^\\d{10}$', r'^\\(\\d{3}\\) \\d{3}-\\d{4}$']\n",
+    "    for pattern in patterns:\n",
+    "        if re.match(pattern, phone_number):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "contact_list['consistent_format'] = contact_list['Phone'].apply(find_inconsistent_phone_formats)\n",
+    "inconsistent_phones = contact_list[contact_list['consistent_format'] == False]\n",
+    "print(\"\\nTask 2: Phone numbers with varying formats:\")\n",
+    "print(inconsistent_phones)\n",
+    "\n",
+    "# Task 3: Review address data for discrepancies in state abbreviations (e.g., CA vs. Calif.).\n",
+    "state_abbreviations = ['CA', 'NY', 'TX'] # Add more as needed\n",
+    "inconsistent_states = address_data[~address_data['State'].isin(state_abbreviations)]\n",
+    "print(f\"\\nTask 3: Discrepancies in state abbreviations (compared to: {state_abbreviations}):\")\n",
+    "print(inconsistent_states)\n",
+    "\n",
+    "print(\"\\n--- 4. Data Drift ---\")\n",
+    "\n",
+    "# Task 1: Compare monthly revenues over six months to identify data drift.\n",
+    "\n",
+    "revenue_change = revenue_data['Revenue'].pct_change() * 100\n",
+    "print(\"\\nTask 1: Monthly revenue change (%):\")\n",
+    "print(revenue_change)\n",
+    "\n",
+    "\n",
+    "# Task 2: Analyze user engagement metrics from a web application over different quarters.\n",
+    "engagement_grouped = engagement_data.groupby('Quarter')['Users'].agg(['mean', 'std'])\n",
+    "print(\"\\nTask 2: User engagement metrics per quarter:\")\n",
+    "print(engagement_grouped)\n",
+    "\n",
+    "\n",
+    "# Task 3: Review a stock price dataset to detect any anomalies over a year.\n",
+    "\n",
+    "stock_prices['Price Change'] = stock_prices['Price'].diff()\n",
+    "print(\"\\nTask 3: Stock price changes:\")\n",
+    "print(stock_prices)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
