--- a/src/Module 3/Techniques to Improve Data Quality/Ques_9.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_9.ipynb
@@ -10,11 +10,173 @@
     "# Description: Use a simple predictive model to impute missing values in a column.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "   Feature1  Feature2  TargetColumn\n",
+      "0       1.0       2.1          10.0\n",
+      "1       2.0       3.5          20.0\n",
+      "2       NaN       NaN          30.0\n",
+      "3       4.0       5.2           NaN\n",
+      "4       5.0       6.8          50.0\n",
+      "5       NaN       7.1          60.0\n",
+      "6       7.0       NaN           NaN\n",
+      "7       8.0       9.3          80.0\n",
+      "\n",
+      "Missing values before imputation:\n",
+      "Feature1        2\n",
+      "Feature2        2\n",
+      "TargetColumn    2\n",
+      "dtype: int64\n",
+      "\n",
+      "DataFrame after predictive imputation of 'TargetColumn':\n",
+      "   Feature1  Feature2  TargetColumn\n",
+      "0       1.0       2.1          10.0\n",
+      "1       2.0       3.5          20.0\n",
+      "2       NaN       NaN          30.0\n",
+      "3       4.0       5.2          40.0\n",
+      "4       5.0       6.8          50.0\n",
+      "5       NaN       7.1          60.0\n",
+      "6       7.0       NaN          70.0\n",
+      "7       8.0       9.3          80.0\n",
+      "\n",
+      "Missing values after imputation of 'TargetColumn':\n",
+      "Feature1        2\n",
+      "Feature2        2\n",
+      "TargetColumn    0\n",
+      "dtype: int64\n",
+      "\n",
+      "DataFrame after predictive imputation of 'Feature2':\n",
+      "   Feature1  Feature2  TargetColumn\n",
+      "0       1.0  2.100000          10.0\n",
+      "1       2.0  3.500000          20.0\n",
+      "2       NaN  4.411799          30.0\n",
+      "3       4.0  5.200000           NaN\n",
+      "4       5.0  6.800000          50.0\n",
+      "5       NaN  7.100000          60.0\n",
+      "6       7.0  5.860677           NaN\n",
+      "7       8.0  9.300000          80.0\n",
+      "\n",
+      "Missing values after imputation of 'Feature2':\n",
+      "Feature1        2\n",
+      "Feature2        0\n",
+      "TargetColumn    2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "def predictive_imputation(df, column_to_impute, features):\n",
+    "    \"\"\"\n",
+    "    Imputes missing values in a specified column using a predictive model.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "        column_to_impute (str): The name of the column with missing values.\n",
+    "        features (list): A list of column names to use as features for prediction.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A new DataFrame with missing values in the specified\n",
+    "                      column imputed.\n",
+    "    \"\"\"\n",
+    "    df_imputed = df.copy()\n",
+    "\n",
+    "    # Separate rows with missing values in the target column\n",
+    "    missing_target = df_imputed[df_imputed[column_to_impute].isnull()]\n",
+    "    complete_target = df_imputed.dropna(subset=[column_to_impute])\n",
+    "\n",
+    "    if complete_target.empty:\n",
+    "        print(f\"Warning: No complete data available to train the model for '{column_to_impute}'. Returning original DataFrame.\")\n",
+    "        return df\n",
+    "\n",
+    "    # Drop rows from the complete data that have missing values in the features\n",
+    "    complete_data_for_model = complete_target.dropna(subset=features)\n",
+    "\n",
+    "    if complete_data_for_model.empty:\n",
+    "        print(f\"Warning: No complete data in the features for '{column_to_impute}'. Returning original DataFrame.\")\n",
+    "        return df\n",
+    "\n",
+    "    # Prepare features and target variable for training using only complete rows\n",
+    "    X_train = complete_data_for_model[features]\n",
+    "    y_train = complete_data_for_model[column_to_impute]\n",
+    "\n",
+    "    # Initialize and train a simple predictive model (Linear Regression for numeric data)\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Prepare features for prediction in the missing target data, handling potential NaNs\n",
+    "    X_predict = missing_target[features].fillna(complete_target[features].mean()) # Impute NaNs in features with the mean of the complete data\n",
+    "\n",
+    "    if not X_predict.empty:\n",
+    "        # Predict the missing values\n",
+    "        predicted_values = model.predict(X_predict)\n",
+    "\n",
+    "        # Fill the missing values in the copied DataFrame\n",
+    "        df_imputed.loc[df_imputed[column_to_impute].isnull(), column_to_impute] = predicted_values\n",
+    "\n",
+    "    return df_imputed\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # Create a sample DataFrame with missing values\n",
+    "    data = {'Feature1': [1, 2, None, 4, 5, None, 7, 8],\n",
+    "            'Feature2': [2.1, 3.5, None, 5.2, 6.8, 7.1, None, 9.3],\n",
+    "            'TargetColumn': [10, 20, 30, None, 50, 60, None, 80]}\n",
+    "    df = pd.DataFrame(data)\n",
+    "    print(\"Original DataFrame:\")\n",
+    "    print(df)\n",
+    "    print(\"\\nMissing values before imputation:\")\n",
+    "    print(df.isnull().sum())\n",
+    "\n",
+    "    # Define the column to impute and the features to use\n",
+    "    column_to_impute = 'TargetColumn'\n",
+    "    features = ['Feature1', 'Feature2']\n",
+    "\n",
+    "    # Impute the missing values\n",
+    "    df_imputed = predictive_imputation(df.copy(), column_to_impute, features)\n",
+    "    print(\"\\nDataFrame after predictive imputation of 'TargetColumn':\")\n",
+    "    print(df_imputed)\n",
+    "    print(\"\\nMissing values after imputation of 'TargetColumn':\")\n",
+    "    print(df_imputed.isnull().sum())\n",
+    "\n",
+    "    # Example with a different column to impute\n",
+    "    column_to_impute_2 = 'Feature2'\n",
+    "    features_2 = ['Feature1', 'TargetColumn']\n",
+    "    df_imputed_2 = predictive_imputation(df.copy(), column_to_impute_2, features_2)\n",
+    "    print(f\"\\nDataFrame after predictive imputation of '{column_to_impute_2}':\")\n",
+    "    print(df_imputed_2)\n",
+    "    print(f\"\\nMissing values after imputation of '{column_to_impute_2}':\")\n",
+    "    print(df_imputed_2.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
