--- a/src/Module 3/Techniques to Improve Data Quality/Ques_10.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_10.ipynb
@@ -11,11 +11,156 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Classification Report ===\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00         1\n",
+      "           1       1.00      1.00      1.00         1\n",
+      "\n",
+      "    accuracy                           1.00         2\n",
+      "   macro avg       1.00      1.00      1.00         2\n",
+      "weighted avg       1.00      1.00      1.00         2\n",
+      "\n",
+      "\n",
+      "=== Predicted Duplicate Pairs ===\n",
+      "   id1  id2       name1      name2              email1                email2  \\\n",
+      "0    1    2  John Smith  Jon Smith    john@example.com    jsmith@example.com   \n",
+      "2    1    4  John Smith   J. Smith    john@example.com  john.smith@gmail.com   \n",
+      "4    2    4   Jon Smith   J. Smith  jsmith@example.com  john.smith@gmail.com   \n",
+      "\n",
+      "   is_duplicate  confidence  \n",
+      "0             1        0.78  \n",
+      "2             1        0.78  \n",
+      "4             1        0.78  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from itertools import combinations\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Sample data\n",
+    "df = pd.DataFrame({\n",
+    "    'id': [1, 2, 3, 4],\n",
+    "    'name': ['John Smith', 'Jon Smith', 'Jane Doe', 'J. Smith'],\n",
+    "    'email': ['john@example.com', 'jsmith@example.com', 'jane.d@example.com', 'john.smith@gmail.com']\n",
+    "})\n",
+    "\n",
+    "# Manually labeled training data (for simplicity)\n",
+    "# 1 if duplicate, 0 otherwise\n",
+    "# These should be prepared from historical duplicates or labeled data\n",
+    "labeled_pairs = [\n",
+    "    (0, 1, 1),  # John Smith vs Jon Smith = duplicate\n",
+    "    (0, 2, 0),  # John Smith vs Jane Doe = not duplicate\n",
+    "    (1, 2, 0),  # Jon Smith vs Jane Doe = not duplicate\n",
+    "    (0, 3, 1),  # John Smith vs J. Smith = duplicate\n",
+    "]\n",
+    "\n",
+    "# Create a DataFrame of labeled pairs\n",
+    "train_data = []\n",
+    "for i, j, label in labeled_pairs:\n",
+    "    row1, row2 = df.iloc[i], df.iloc[j]\n",
+    "    train_data.append({\n",
+    "        'name1': row1['name'],\n",
+    "        'name2': row2['name'],\n",
+    "        'email1': row1['email'],\n",
+    "        'email2': row2['email'],\n",
+    "        'label': label\n",
+    "    })\n",
+    "train_df = pd.DataFrame(train_data)\n",
+    "\n",
+    "# Feature engineering: string similarity\n",
+    "def string_similarity(a, b):\n",
+    "    vectorizer = TfidfVectorizer().fit([a, b])\n",
+    "    vecs = vectorizer.transform([a, b])\n",
+    "    return cosine_similarity(vecs[0], vecs[1])[0][0]\n",
+    "\n",
+    "def compute_features(row):\n",
+    "    return pd.Series({\n",
+    "        'name_sim': string_similarity(row['name1'], row['name2']),\n",
+    "        'email_sim': string_similarity(row['email1'], row['email2'])\n",
+    "    })\n",
+    "\n",
+    "features = train_df.apply(compute_features, axis=1)\n",
+    "X = features\n",
+    "y = train_df['label']\n",
+    "\n",
+    "# Train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Train a model\n",
+    "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"\\n=== Classification Report ===\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# ---------------------\n",
+    "# ✅ Predict on all possible pairs\n",
+    "# ---------------------\n",
+    "all_pairs = list(combinations(df.index, 2))\n",
+    "\n",
+    "pair_predictions = []\n",
+    "for i, j in all_pairs:\n",
+    "    row1, row2 = df.iloc[i], df.iloc[j]\n",
+    "    name_sim = string_similarity(row1['name'], row2['name'])\n",
+    "    email_sim = string_similarity(row1['email'], row2['email'])\n",
+    "    features_df = pd.DataFrame([[name_sim, email_sim]], columns=X.columns)\n",
+    "    pred = model.predict(features_df)[0]\n",
+    "    prob = model.predict_proba(features_df)[0][1]\n",
+    "    pair_predictions.append({\n",
+    "        'id1': row1['id'],\n",
+    "        'id2': row2['id'],\n",
+    "        'name1': row1['name'],\n",
+    "        'name2': row2['name'],\n",
+    "        'email1': row1['email'],\n",
+    "        'email2': row2['email'],\n",
+    "        'is_duplicate': pred,\n",
+    "        'confidence': round(prob, 2)\n",
+    "    })\n",
+    "\n",
+    "result_df = pd.DataFrame(pair_predictions)\n",
+    "print(\"\\n=== Predicted Duplicate Pairs ===\")\n",
+    "print(result_df[result_df['is_duplicate'] == 1])\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
